Add Anthropic smoke checks
Add disabled-by-default JUnit and CLI smoke checks for the live Anthropic SDK path.

Document the smoke commands and clean up the duplicate Anthropic client import.